# HSS

./: JETSON_SETUP.md  README_INTEGRATED_SYSTEM.md  README_JETSON_DEPLOYMENT.md  jetson_requirements.txt  requirements.txt
Arayüz/PROJE/: _arayuz.py  angajman2.py  arayuz.py  arayuz.ui  manuel.py
Computer_Vision/: Data_process_teknofest.ipynb  detection_template.py
Computer_Vision/Mission1/: data.yaml
Computer_Vision/Mission3/: qr+3.py
config/: camera_config.json  firing_config.json  motor_config.json
documents/: development_roadmap.md  next_steps.md  project_overview.md  technical_specifications.md
examples/: coordinate_system_example.py
ros2_air_defense/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_air_defense/action/: EngageTarget.action  MoveToPosition.action  ScanArea.action
ros2_air_defense/config/: air_defense_config.yaml
ros2_air_defense/launch/: air_defense_system.launch.py
ros2_air_defense/msg/: DetectedTarget.msg  FiringCommand.msg  MotorCommand.msg  MotorPosition.msg  SafetyStatus.msg  SystemStatus.msg  TargetList.msg
ros2_air_defense/scripts/: air_defense_orchestrator_node.py  coordinate_transformer_node.py  firing_controller_node.py  motor_controller_node.py  vision_bridge_node.py
ros2_air_defense/srv/: ArmSystem.srv  DisarmSystem.srv  EmergencyStop.srv  HomeMotors.srv  SetTargetingMode.srv
scripts/: jetson_setup.sh  test_system.sh
src/motors/: coordinate_transformer.py  stepper_controller.py
src/shooting/: firing_controller.py
src/vision/: yolo_detector.py
